# pulumi-unifi-native

./: .gitignore  .golangci.yml  .goreleaser.darwin.yml  .goreleaser.yml  Makefile  README.md  cleaning-openapi.yml.md  go.work
examples/: examples_test.go  (+4 more)
sdk/python/: README.md  pyproject.toml
sdk/python/pulumi_unifi_native/: README.md  __init__.py  provider.py
sdk/python/pulumi_unifi_native.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk/python/pulumi_unifi_native/account/: account.py  list_account.py  outputs.py
sdk/python/pulumi_unifi_native/acl_rules/: _enums.py  list_acl_rules.py
sdk/python/pulumi_unifi_native/apgroups/: ap_group.py  list_ap_groups.py  outputs.py
sdk/python/pulumi_unifi_native/auto_speedtest/: __init__.py  get_setting_auto_speedtest.py
sdk/python/pulumi_unifi_native/baresip/: setting_baresip.py
sdk/python/pulumi_unifi_native/ble/: ble_setting.py
sdk/python/pulumi_unifi_native/broadcastgroup/: get_broadcast_group.py  list_broadcast_group.py
sdk/python/pulumi_unifi_native/channelplan/: __init__.py  get_channel_plan.py
sdk/python/pulumi_unifi_native/config/: __init__.pyi  vars.py
sdk/python/pulumi_unifi_native/configuration/: _inputs.py  get_wan_load_balancing_configuration.py  outputs.py
sdk/python/pulumi_unifi_native/connectivity/: __init__.py  setting_connectivity.py
sdk/python/pulumi_unifi_native/content_filtering/: __init__.py  _inputs.py  content_filtering_rule.py  outputs.py
sdk/python/pulumi_unifi_native/country/: get_setting_country.py
sdk/python/pulumi_unifi_native/dashboard/: _inputs.py  get_dashboard.py
(+248 files in other folders)
