[project]
  name = "pulumi_unifi_native"
  description = "A Pulumi package for creating and managing Unifi OS resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11,<5; python_version < \"3.11\""]
  keywords = ["pulumi", "unifi-native", "category/network", "kind/native"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "0.0.0"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://github.com/bbbates/pulumi-unifi-native"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_unifi_native = ["py.typed", "pulumi-plugin.json"]
